--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "zahzah/module-distribution",
+    "name": "hanafalah/module-distribution",
     "autoload": {
         "psr-4": {
-            "Zahzah\\ModuleDistribution\\": "src/"
+            "Hanafalah\\ModuleDistribution\\": "src/"
         }
     },
     "authors": [
@@ -14,15 +14,15 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Zahzah\\ModuleDistribution\\ModuleDistributionServiceProvider"
+                "Hanafalah\\ModuleDistribution\\ModuleDistributionServiceProvider"
             ]
         }
     },
     "require": {
-        "gii/module-item": "1.x",
-        "zahzah/module-transaction": "1.x",
-        "zahzah/module-warehouse": "1.x",
-        "zahzah/laravel-support": "1.x"
+        "hanafalah/module-item": "1.x",
+        "hanafalah/module-transaction": "1.x",
+        "hanafalah/module-warehouse": "1.x",
+        "hanafalah/laravel-support": "1.x"
     },
     "minimum-stability": "dev",
     "prefer-stable": false
