--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,6 @@
         "hanafalah/module-item": "dev-main",
         "hanafalah/module-transaction": "dev-main",
         "hanafalah/module-warehouse": "dev-main",
-        "hanafalah/laravel-support": "dev-main0"
+        "hanafalah/laravel-support": "dev-main"
     }
 }
