--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "authors": [
         {
             "name": "hamzah",
-            "email": "hamzah nur al falah@mail.com"
+            "email": "hamzahnafalah@gmail.com"
         }
     ],
     "require": {
